añadimos expllicaciones adicionales example4